--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Workouts">
+        android:theme="@style/Theme.Workouts"
+        android:name=".WorkoutsApplication">
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -16,7 +17,6 @@
             android:theme="@style/Theme.Workouts.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
