--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,9 @@ dependencies {
     implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
     kapt "com.google.dagger:hilt-compiler:2.38.1"
 
+    // Exo Player
+    implementation 'com.google.android.exoplayer:exoplayer:2.14.1'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
